<resources>
    <string name="app_name">SensorProject</string>

    <string-array name="roomList">
        <item>Current room</item>
        <item>Other room</item>
        <item>+ add new room</item>
    </string-array>
    <string name="mRoomView">3.136 Building A</string>


    <string name="mLoginEmail">email@test.dk</string>
    <string name="mPassword">Password</string>
    <string name="mSignUpCriterias">min 6 characters</string>


    <string name="mLoginButton">Login</string>

    <string name="mSignUpLink">Sign up</string>
    <string name="mSignUpEmail">email@test.dk</string>


    <string name="mForgotPasswordLink">Forgot password</string>
    <string name="mLoginRememberCheckBox">Remember me</string>

    <string name="mCoView">CO (PPM)</string>
    <string name="mTempView">Temperature (°C)</string>
    <string name="mHumidView">Humidity (%)</string>

    <string name="mCoInput"></string>
    <string name="mTempInput"></string>
    <string name="mHumidInput"></string>


    //The gauges clicked


    <string name="chart">The Chart</string>
    <string name="info">Optimal range 21-25</string>


    <string name="mTemperatureInfo">


        <b>Red zone:</b> below 10 or above 30 degrees way too cold or hot
        \n
        \n
        <b>Yellow zone:</b> between 10-21 or 25-30 degrees, bit too hot or cold
        \n
        \n
       <b>Green zone:</b> between 21-25 degrees, optimal
        \n
        \n
        <b>Description:</b>
        \n
        \n
        <b>Red zone: Too hot or cold to concentrate and will impact the body in its
        ability to function and concentrate properly</b>
        \n
        \n
        <b>Yellow zone: a bit too hot or cold, you will be able to feel a slight decrease in concentration and
        energy levels.</b>
        \n
        \n
        <b>Green zone: Optimal and nothing to worry about.</b>
        </string>


    <string name="mHumidityInfo">

        <b>Red zone:</b> above 60% or less than 30% humidity, way too humid or dry
        \n
        \n
        <b>Yellow zone:</b> between 30-45% or between 50-60% humidity, too humid or dry.
        \n
        \n
        <b>Green zone:</b> between 45-50% humidity, optimal
        \n
        \n

        <br><b>Description:</b></br>
        \n
        \n

       <b> Red zone:</b> the indoor climate has reached levels that wont be optimal for you,
        it can mean that the room is either too humid or too dry. Can cause
        growth of mold, funguses, dust mites, and other pests.
        Mold contributes to a number of diseases and thrives in humid
        climates, generally above 60 percent. If the room continues to be in the
        red zone for an extended period of time try to increase your breaks
        from the room, or try to do something to fix it.
        \n
        \n
        <b>Yellow zone:</b> it is either a bit too humid or dry. This wont have a huge affect on a healthy body,
        but people with asthma or respiratory diseases should not be in this room.
        \n
        \n
        <br><b>Green zone:</b> Means that the humidity is perfect for optimal body function.</br>

      </string>

    <string name="mCoInfo">
        <b>Red zone:</b> above 90ppm, way too high co level CRITICAL
        \n
        \n
        <b>Yellow zone:</b> between 70-90ppm, too high co level
        \n
        \n
        <b>Green zone:</b> between 1-70ppm, optimal
        \n
        \n
        <b>Description:</b>
        \n
        \n

        <b>Red zone:</b> At sustained CO concentrations above 150 ppm,
        disorientation, unconsciousness, vomiting and death are possible.
        \n
        \n

      <b>Yellow zone:</b> can increase risk of heart disease, cause headache, fatigue and nausea
        if it remains in this zone for an extended period of time, people with
        heart diseases might experience an increase in chest pain.
        \n
        \n

        <b>Green zone:</b> Optimal and nothing to worry about.
</string>


    <string name="mShowButton">Show</string>
    <string name="mChartButton">Click for work</string>
    <string name="logoView"></string>


    <string-array name="ranges">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="information_text">If CO is too high, it becomes dangerous and will decrease focus and oxygen levels</string>


</resources>
