<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mCoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        tools:text="@string/mCoView" />

    <TextView
        android:id="@+id/mCoInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        tools:text="@string/mCoInput" />

    <TextView
        android:id="@+id/mTempView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        tools:text="@string/mTempView" />

    <TextView
        android:id="@+id/mTempInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        tools:text="@string/mTempInput" />

    <TextView
        android:id="@+id/mHumidView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        tools:text="@string/mHumidView" />

    <TextView
        android:id="@+id/mHumidInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        tools:text="@string/mHumidInput" />

    <Button
        android:id="@+id/mShowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/mShowButton" />

</LinearLayout>