<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gauge="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gaugeclicklayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainPageFragments.MainPageFragment">


    <TextView
        android:id="@+id/mCoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/mCoView"
        android:textSize="18sp" />

    <com.ntt.customgaugeview.library.GaugeView
        android:id="@+id/gv_co"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        gauge:divisions="10"
        gauge:rangeValues="@array/ranges"
        gauge:scaleEndValue="100"
        gauge:showInnerRim="false"
        gauge:showNeedle="true"
        gauge:showOuterBorder="false"
        gauge:showOuterRim="true"
        gauge:showOuterShadow="false"
        gauge:showRangeText="true"
        gauge:showRanges="true"
        gauge:showScale="true"
        gauge:subdivisions="1"
        gauge:textValueSize="0.15" />

    <TextView
        android:id="@+id/mTempView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center|center_horizontal"
        android:text="@string/mTempView"
        android:textSize="18sp" />

    <com.ntt.customgaugeview.library.GaugeView
        android:id="@+id/gv_temp"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        gauge:divisions="10"
        gauge:rangeValues="@array/ranges"
        gauge:scaleEndValue="100"
        gauge:showInnerRim="false"
        gauge:showNeedle="true"
        gauge:showOuterBorder="false"
        gauge:showOuterRim="true"
        gauge:showOuterShadow="false"
        gauge:showRangeText="true"
        gauge:showRanges="true"
        gauge:textUnit="°C"
        gauge:showScale="true"
        gauge:subdivisions="1"
        gauge:textValueSize="0.15" />

    <TextView
        android:id="@+id/mHumidView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center|center_horizontal"
        android:text="@string/mHumidView"
        android:textSize="18sp" />

    <com.ntt.customgaugeview.library.GaugeView
        android:id="@+id/gv_humid"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        gauge:divisions="10"
        gauge:rangeValues="@array/ranges"
        gauge:scaleEndValue="100"
        gauge:showInnerRim="false"
        gauge:showNeedle="true"
        gauge:showOuterBorder="false"
        gauge:showOuterRim="true"
        gauge:showOuterShadow="false"
        gauge:showRangeText="true"
        gauge:showRanges="true"
        gauge:showScale="true"
        gauge:subdivisions="1"
        gauge:textValueSize="0.15" />

</LinearLayout>


